--- a/index2.html
+++ b/index2.html
@@ -116,7 +116,7 @@
             <div class="toolbar">
             <li><img src="resources/images/toolbar_icon_white_browse.png" class="button_browse"></li>
 <li><img src="resources/images/toolbar_icon_white_fullscreen.png" class="button_screen display_optional" ></li>
-<li></li>
+<li><a href="http://www.ezwebgallery.org/"><img src="resources/images/toolbar_icon_browse_ezwebgallery.png" class="button_ezwebgallery"></a></li>
             </div>
             <!-- photoLefter et photoRighter doivent se trouver AVANT wrapperAffichagePhoto pour avoir trois colonnes.
                  cf. http://www.alsacreations.com/tuto/lire/588-design-trois-colonnes-positionnement-flottant.html !-->
